# Cos

./: CMakeLists.txt  README.md
docs/: Sqrt.md
examples/AclNNInvocationNaive/: CMakeLists.txt  README.md  gen_data.py  main.cpp  run.sh  verify_result.py
framework/tf_plugin/: CMakeLists.txt  tensorflow_sqrt_plugin.cc
op_host/: cos.cpp  cos_tiling.h
op_kernel/: cos.cpp
tests/st/: README.md  Sqrt_case_alltype.json  msopst.ini  test_sqrt.py
